# graphical-cloud-manager

./: .gitignore  CHANGELOG.md  GraphicalCloudManager.spec  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
docs/: DESIGN.md  bulk_import_template.csv
src/gcm/: __init__.py  app.py  config.py
src/gcm/auth/: auth_manager.py  google_auth_manager.py  google_token_cache.py  token_cache.py
src/gcm/google/: client.py  service_account.py
src/gcm/graph/: capabilities.py  client.py  pagination.py  search.py
src/gcm/models/: audit_entry.py  bulk_import.py  device.py  google_admin_audit.py  google_device.py  google_group.py  google_mailbox.py  google_sign_in.py  google_user.py  group.py  intune_device.py  license.py  mailbox.py  role.py  sign_in.py  (+1 more)
tests/: test_accessibility_audit.py  test_confirm_widgets.py  test_csv_export_button.py  test_dynamic_rule_dialog.py  test_impact_preview_dialog.py  test_live_region.py  test_pages_audit_log.py  test_pages_bulk_import.py  test_pages_devices_signins.py  test_pages_exchange.py  test_pages_intune.py  test_pages_licensing_roles.py  test_pages_users_groups.py
tests/test_services/: test_audit_log.py  test_bulk_import_service.py  test_capabilities.py  test_csv_io.py  test_device_service.py  test_dynamic_membership.py  test_graph_client.py  test_graph_errors.py  test_group_service.py  test_impact_preview.py  test_intune_device_service.py  test_license_service.py  test_mailbox_service.py  test_pagination.py  test_role_service.py  test_search.py  test_sign_in_log_service.py  test_updater.py  test_user_service.py
(+50 files in other folders)
