[project]
name = "gcm"
version = "0.7.0"
description = "Graphical Cloud Manager: an accessible, cross-platform GUI for Microsoft Entra, Intune, Exchange, and Google Workspace administration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.7",
    "qasync>=0.27",
    "msal>=1.28",
    "msgraph-sdk>=1.5",
    "keyring>=25.0",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-asyncio>=0.24",
]

[project.scripts]
gcm = "gcm.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
